--- a/oolab/src/main/resources/simulationMenu.fxml
+++ b/oolab/src/main/resources/simulationMenu.fxml
@@ -9,7 +9,7 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
-            fx:controller="agh.ics.oop.presenter.SimulationPresenter"
+            fx:controller="agh.ics.oop.presenter.SimulationMenuPresenter"
             fx:id="mainBorderPane">
     <top>
         <TextField fx:id="moveInput" BorderPane.alignment="BOTTOM_CENTER" maxWidth="750"/>
