--- a/oolab/src/main/resources/simulationWindow.fxml
+++ b/oolab/src/main/resources/simulationWindow.fxml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.GridPane?>
+
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
-            fx:controller="agh.ics.oop.presenter.SimulationMenuPresenter"
+            fx:controller="agh.ics.oop.presenter.SimulationWindowPresenter"
             fx:id="mainBorderPane">
     <center>
         <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="BASELINE_CENTER"></GridPane>
     </center>
+    <bottom>
+        <VBox BorderPane.alignment="BASELINE_CENTER" alignment="BASELINE_CENTER" fx:id="bottomElements">
+            <Label fx:id="whatMoveHappened" textAlignment="CENTER"/>
+        </VBox>
+    </bottom>
 </BorderPane>
