--- a/oolab/src/main/resources/simulationMenu.fxml
+++ b/oolab/src/main/resources/simulationMenu.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.ChoiceBox?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
@@ -24,26 +25,26 @@
             <HBox alignment="CENTER" fx:id="boxOfWidthAndHeight" spacing="10">
                 <VBox alignment="CENTER">
                     <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Height of Map:</Label>
-                    <TextField fx:id="heightInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                    <TextField fx:id="heightInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                 </VBox>
                 <VBox alignment="CENTER">
                     <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Width of Map:</Label>
-                    <TextField fx:id="widthInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                    <TextField fx:id="widthInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                 </VBox>
             </HBox>
 
             <HBox alignment="CENTER" fx:id="boxOfPlantSettings" spacing="10">
                 <VBox alignment="CENTER">
                     <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">How many starting plants:</Label>
-                    <TextField fx:id="howManyPlantsInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                    <TextField fx:id="howManyPlantsInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                 </VBox>
                 <VBox alignment="CENTER">
                     <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Energy from eating one plant:</Label>
-                    <TextField fx:id="howManyEnergyFromPlantInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                    <TextField fx:id="howManyEnergyFromPlantInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                 </VBox>
                 <VBox alignment="CENTER">
                     <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">How many plants can grow every day:</Label>
-                    <TextField fx:id="howManyPlantsGrowEverydayInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                    <TextField fx:id="howManyPlantsGrowEverydayInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                 </VBox>
                 <VBox alignment="CENTER">
                     <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Is plants prefer to grow near dead bodies?</Label>
@@ -55,15 +56,15 @@
                 <HBox spacing="10" alignment="CENTER">
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">How many animals will be on start:</Label>
-                        <TextField fx:id="howManyAnimalsOnStartInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="howManyAnimalsOnStartInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">How many energy each animal will have on start:</Label>
-                        <TextField fx:id="howManyStartingEnergyAnimalHaveInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="howManyStartingEnergyAnimalHaveInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">How long genom of one animal will be:</Label>
-                        <TextField fx:id="howLongGenomWillBeInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="howLongGenomWillBeInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Should animals be walking slower if they're older?</Label>
@@ -77,24 +78,28 @@
                 <HBox spacing="10" alignment="CENTER">
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Energy that animal will be full and ready to reproduce:</Label>
-                        <TextField fx:id="energeyNeededToReproduceInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="energeyNeededToReproduceInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Energy that will be used to reproduce:</Label>
-                        <TextField fx:id="energyUsedToReproduceInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="energyUsedToReproduceInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Minimum number of mutation in descendant:</Label>
-                        <TextField fx:id="minNumberOfMutationInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="minNumberOfMutationInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                     <VBox alignment="CENTER">
                         <Label maxWidth="150" wrapText="true" textAlignment="CENTER" style="-fx-text-fill: black;">Maximum number of mutation in descendant:</Label>
-                        <TextField fx:id="maxNumberOfMutationInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100">10</TextField>
+                        <TextField fx:id="maxNumberOfMutationInput" BorderPane.alignment="BASELINE_CENTER" maxWidth="100"></TextField>
                     </VBox>
                 </HBox>
             </VBox>
             <Button fx:id="startingSimulation" text="Start" onAction="#onSimulationStartClicked" prefWidth="100" prefHeight="50"/>
-                <Button id="saveSimulation"  alignment="CENTER" text="Save Configuration"/>
+            <HBox alignment="CENTER" spacing="10">
+                <ChoiceBox fx:id="configurationChoise" ></ChoiceBox>
+                <TextField fx:id="nameOfConfiguration"></TextField>
+                <Button fx:id="saveSimulation"  onAction="#onSaveConfigurationClicked" alignment="CENTER" text="Save Configuration"/>
+            </HBox>
         </VBox>
     </center>
 </BorderPane>
