Following animal + added plant growing on dead bodies variant

--- a/oolab/src/main/resources/simulationWindow.fxml
+++ b/oolab/src/main/resources/simulationWindow.fxml
@@ -17,7 +17,7 @@
 
 
     <left>
-        <VBox spacing="5">
+        <VBox fx:id="descriptionOfSimulation" spacing="5">
         <HBox>
             <Label>Current day: </Label>
             <Text fx:id="numberOfDays"></Text>
